# fastapi-shell-commands

./: README.md  pyproject.toml
app/: main.py
scripts/: install.sh  start.sh
tests/: test_main.py
