[tool.poetry]
name = "web-shell"
version = "0.1.0"
description = "Shell through the wire"
authors = ["Maysra Gamal <maysragamal@gmail.com>"]
readme = "README.md"
packages = [{include = "web_shell"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
requests = "^2.28.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
